src/test/ui/variants/variant-namespacing.stderr
error[E0255]: the name `XStruct` is defined multiple times
  --> $DIR/variant-namespacing.rs:24:35
   |
LL | type XStruct = u8;
   | ------------------ previous definition of the type `XStruct` here
...
LL | pub use variant_namespacing::XE::{XStruct, XTuple, XUnit};
   |                                   ^^^^^^^ `XStruct` reimported here
   |
   = note: `XStruct` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use variant_namespacing::XE::{XStruct as OtherXStruct, XTuple, XUnit};
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0255]: the name `XTuple` is defined multiple times
  --> $DIR/variant-namespacing.rs:24:44
   |
LL | type XTuple = u8;
   | ----------------- previous definition of the type `XTuple` here
...
LL | pub use variant_namespacing::XE::{XStruct, XTuple, XUnit};
   |                                            ^^^^^^ `XTuple` reimported here
   |
   = note: `XTuple` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use variant_namespacing::XE::{XStruct, XTuple as OtherXTuple, XUnit};
   |                                            ^^^^^^^^^^^^^^^^^^^^^

error[E0255]: the name `XUnit` is defined multiple times
  --> $DIR/variant-namespacing.rs:24:52
   |
LL | type XUnit = u8;
   | ---------------- previous definition of the type `XUnit` here
...
LL | pub use variant_namespacing::XE::{XStruct, XTuple, XUnit};
   |                                                    ^^^^^ `XUnit` reimported here
   |
   = note: `XUnit` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use variant_namespacing::XE::{XStruct, XTuple, XUnit as OtherXUnit};
   |                                                    ^^^^^^^^^^^^^^^^^^^

error[E0255]: the name `Struct` is defined multiple times
  --> $DIR/variant-namespacing.rs:28:13
   |
LL | type Struct = u8;
   | ----------------- previous definition of the type `Struct` here
...
LL | pub use E::{Struct, Tuple, Unit};
   |             ^^^^^^ `Struct` reimported here
   |
   = note: `Struct` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use E::{Struct as OtherStruct, Tuple, Unit};
   |             ^^^^^^^^^^^^^^^^^^^^^

error[E0255]: the name `Tuple` is defined multiple times
  --> $DIR/variant-namespacing.rs:28:21
   |
LL | type Tuple = u8;
   | ---------------- previous definition of the type `Tuple` here
...
LL | pub use E::{Struct, Tuple, Unit};
   |                     ^^^^^ `Tuple` reimported here
   |
   = note: `Tuple` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use E::{Struct, Tuple as OtherTuple, Unit};
   |                     ^^^^^^^^^^^^^^^^^^^

error[E0255]: the name `Unit` is defined multiple times
  --> $DIR/variant-namespacing.rs:28:28
   |
LL | type Unit = u8;
   | --------------- previous definition of the type `Unit` here
...
LL | pub use E::{Struct, Tuple, Unit};
   |                            ^^^^ `Unit` reimported here
   |
   = note: `Unit` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use E::{Struct, Tuple, Unit as OtherUnit};
   |                            ^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0255`.
